categorized project files

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-This repository for My Udacity Projects
+This repository is for My Udacity Projects
+
+- Project 1 is for Statistical Analysis that contain statistics about Stroop Experiment(Excel is used).
+
+- Project 2 is for Data Analysis of baseball statistics. In this Analyse, Effects of players' BMI is examined  on their career according to their hand uses(Python(Numpy, Pandas, Matplotlib) is used on IPython).  
+
+
